Fixed timeline component cut off on mobile screen

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -45,9 +45,6 @@
 }
 
 @media screen and (max-width: 800px){
-    .page {
-        overflow: hidden;
-    }
     .text-zone {
         left: 2.5%;
         h1 {
